--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@genkit-ai/firebase": "^1.16.0",
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.16.0",
+    "@google-cloud/secret-manager": "^5.5.0",
     "@hookform/resolvers": "^4.1.3",
     "@opentelemetry/exporter-jaeger": "^2.0.1",
     "@opentelemetry/winston-transport": "^0.14.0",
@@ -39,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
