# Fetch Your Firebase Config from GCP in One Shot
Automate pulling **al

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "env:fetch": "node --experimental-specifier-resolution=node scripts/fetchFirebaseConfig.mjs",
+    "dev": "npm run env:fetch && next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
+    "build": "npm run env:fetch && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -50,6 +51,7 @@
     "firebase": "^12.1.0",
     "framer-motion": "^11.3.19",
     "genkit": "^1.16.0",
+    "googleapis": "^140.0.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
