--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "env:fetch": "node --experimental-specifier-resolution=node scripts/fetchFirebaseConfig.mjs",
-    "dev": "npm run env:fetch && next dev --turbopack -p 9002",
+    "dev": "npm run env:fetch && next dev --turbopack",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "npm run env:fetch && next build",
