--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
+# Ignore build output directory
 /.next/
-/out/
 
-# production
-/build
+# Ignore Node.js modules
+/node_modules/
 
-# misc
-.DS_Store
+# Ignore environment files
+.env
+.env.local
+
+# Ignore sensitive files that may contain credentials (e.g., service account keys)
+*.key
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-.genkit/*
-.env*
-
-# firebase
-firebase-debug.log
-firestore-debug.log
+*.json
