--- a/package.json
+++ b/package.json
@@ -3,76 +3,71 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "dev": "next dev --port 9002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/firebase": "1.16.0",
-    "@genkit-ai/googleai": "1.14.1",
-    "@genkit-ai/next": "1.16.0",
-    "@google-cloud/secret-manager": "5.5.0",
-    "@hookform/resolvers": "4.1.3",
-    "@opentelemetry/api": "1.9.0",
-    "@opentelemetry/exporter-jaeger": "2.0.1",
-    "@opentelemetry/winston-transport": "0.14.0",
-    "@radix-ui/react-accordion": "1.2.3",
-    "@radix-ui/react-alert-dialog": "1.1.6",
-    "@radix-ui/react-avatar": "1.1.3",
-    "@radix-ui/react-checkbox": "1.1.4",
-    "@radix-ui/react-collapsible": "1.1.11",
-    "@radix-ui/react-dialog": "1.1.6",
-    "@radix-ui/react-dropdown-menu": "2.1.6",
-    "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-menubar": "1.1.6",
-    "@radix-ui/react-popover": "1.1.6",
-    "@radix-ui/react-progress": "1.1.2",
-    "@radix-ui/react-radio-group": "1.2.3",
-    "@radix-ui/react-scroll-area": "1.2.3",
-    "@radix-ui/react-select": "2.1.6",
-    "@radix-ui/react-separator": "1.1.2",
-    "@radix-ui/react-slider": "1.2.3",
-    "@radix-ui/react-slot": "1.2.3",
-    "@radix-ui/react-switch": "1.1.3",
-    "@radix-ui/react-tabs": "1.1.3",
-    "@radix-ui/react-toast": "1.2.6",
-    "@radix-ui/react-tooltip": "1.1.8",
-    "@tanstack/react-query": "4.36.1",
-    "axios": "1.7.2",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "date-fns": "3.6.0",
-    "dotenv": "16.4.5",
-    "embla-carousel-react": "8.6.0",
-    "firebase": "12.1.0",
-    "framer-motion": "11.3.19",
-    "genkit": "1.16.0",
-    "lucide-react": "0.475.0",
-    "next": "15.3.3",
-    "patch-package": "8.0.0",
+    "@google-cloud/compute": "^4.5.0",
+    "@google-cloud/secret-manager": "^5.5.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@tanstack/react-query": "^5.51.1",
+    "@genkit-ai/googleai": "latest",
+    "@genkit-ai/next": "0.3.3",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.6",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
+    "framer-motion": "^11.3.19",
+    "genkit": "latest",
+    "zod": "latest",
+    "lucide-react": "^0.414.0",
+    "next": "^14.2.5",
     "react": "18.3.1",
-    "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.54.2",
-    "react-intersection-observer": "9.13.0",
-    "recharts": "2.15.1",
-    "tailwind-merge": "3.0.1",
-    "tailwindcss-animate": "1.0.7",
-    "uuid": "9.0.1",
-    "zod": "3.24.2"
+    "react-hook-form": "^7.52.1",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/node": "20",
-    "@types/react": "18",
-    "@types/react-dom": "18",
-    "@types/uuid": "9.0.8",
-    "genkit-cli": "1.14.1",
-    "postcss": "8",
-    "tailwindcss": "3.4.1",
-    "typescript": "5"
+    "@types/node": "^20.14.10",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@types/uuid": "^10.0.0",
+    "@types/yargs": "^17.0.32",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3"
   }
 }
