--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,14 @@
 version: '3.8'
-
 services:
-  mesh-dashboard:
-    build: ./MeshDashboard
+  mesh-core:
+    build: .
     ports:
       - "9002:9002"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9002/health"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-    environment:
-      - DASHBOARD_TOKEN=${DASHBOARD_TOKEN}
-    networks:
-      - meshnet
-
-  destine-root:
-    build: ./destine-root
-    ports:
       - "8080:8080"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/status"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-    environment:
-      - ROOT_AUDIT_KEY=${ROOT_AUDIT_KEY}
-    networks:
-      - meshnet
-
-  firebase-proxy:
-    build: ./firebase-proxy
-    ports:
-      - "4000:4000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-    environment:
-      - FIREBASE_SECRET=${FIREBASE_SECRET}
-    networks:
-      - meshnet
-
-  audit-engine:
-    build: ./audit-engine
-    ports:
-      - "5000:5000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-    environment:
-      - AUDIT_KEY=${AUDIT_KEY}
-    networks:
-      - meshnet
-
-networks:
-  meshnet:
-    driver: bridge
+    volumes:
+      - ./keys:/mesh/keys
+      - ./iam:/mesh/iam
+      - ./frontend:/mesh/frontend
+      - ./mcp-server:/mesh/mcp-server
+    env_file:
+      - .env.local
