Changes before Firebase Studio auto-run

--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
   "author": "Strategist Nehemie",
   "license": "UNLICENSED",
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "eslint": "^8.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.0.0",
     "ts-node": "^10.0.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.0.0"
   },
-  "dependencies": {}
+  "directories": {
+    "doc": "docs"
+  },
+  "dependencies": {
+    "next": "^15.4.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  }
 }
