--- a/package.json
+++ b/package.json
@@ -28,22 +28,26 @@
     "doc": "docs"
   },
   "dependencies": {
+    "expo": "^53.0.20",
     "next": "^15.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "ts-node": "^10.0.0",
+    "@expo/cli": "^0.24.20",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20.0.0",
-    "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.0.0",
+    "@types/react": "^19.1.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@tailwindcss/postcss": "^4.1.11",
-    "tailwindcss": "^3.4.3",
-    "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16",
-    "postcss-loader": "^7.0.2"
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.0.0",
+    "metro": "^0.83.1",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.0.2",
+    "tailwindcss": "^3.4.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^5.0.0"
   }
 }
