--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "doc": "docs"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "expo": "^53.0.20",
+    "firebase": "^12.1.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@expo/cli": "^0.24.20",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.0.0",
     "@types/react": "^19.1.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
