--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "doc": "docs"
   },
   "dependencies": {
+    "@svgdotjs/svg.js": "^3.2.4",
     "d3": "^7.9.0",
     "expo": "^53.0.20",
     "firebase": "^12.1.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "svgdom": "^0.1.22",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
