--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "svgdom": "^0.1.22",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.179.1"
   },
